--- a/API/package.json
+++ b/API/package.json
@@ -1,6 +1,7 @@
 {
   "type": "module",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^5.2.1",
     "mysql2": "^3.16.1",
     "sequelize": "^6.37.7"
